<resources>
    <string name="app_name">Aleks</string>
    <string name="nameHint">Имя</string>
    <string name="save">Сохранить</string>
    <string name="ageHint">Возраст</string>
    <string name="loginHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="signIn">Вход</string>
    <string name="goSignIn">Войти</string>
    <string name="CantSignInMessage">Неверный логин или пароль</string>
    <string name="NullParametersMessage">Пустые поля</string>
    <string name="goSignUp">Зарегистривароваться</string>
    <string name="UserExistMessage">Пользователь существует</string>
    <string name="stateHint">Статус</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_maps">Map</string>
</resources>
