<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/tabSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/LoginET"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/loginHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/PasswordET"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:text="@string/goSignIn"
                    android:onClick="SignIn"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/back_round_smoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/tabSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/NewLoginET"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/loginHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/NewPasswordET"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:hint="@string/passwordHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/NewNameET"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/nameHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/NewStateET"
                            android:maxLines="1"
                            android:inputType="text"
                            android:hint="@string/nameHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <EditText
                            android:id="@+id/NewAgeET"
                            android:maxLines="1"
                            android:inputType="number"
                            android:hint="@string/ageHint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                        <Button
                            android:text="@string/goSignUp"
                            android:onClick="SignUp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/back_round_smoke"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <Button
    android:text="@string/signIn"
    android:background="@drawable/back_round_smoke_bot"
    android:layout_width="match_parent"
    android:layout_height="50dp"/>

</FrameLayout>